--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -21,6 +21,6 @@ jobs:
         pip install -r requirements.txt
     - name: Run todoist_automation
       env:
-        TODOIST_APIKEY: ${{ secrets.TODOIST_API_KEY }}
+        TODOIST_API_KEY: ${{ secrets.TODOIST_API_KEY }}
       run: |
         python automate.py
