--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: '3.x'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -24,3 +24,4 @@ jobs:
         TODOIST_API_KEY: ${{ secrets.TODOIST_API_KEY }}
       run: |
         python automate.py
+      with: { ref: main }
