Change from scheduled to workflow_dispatch

--- a/.github/workflows/youtubeapp.yml
+++ b/.github/workflows/youtubeapp.yml
@@ -1,8 +1,8 @@
 name: auto_album_recommender
 
-on:
-  schedule:
-    - cron: '30 5 * * *'
+on: workflow_dispatch
+#   schedule:
+#     - cron: '30 5 * * *'
 
 jobs:
   build:
