--- a/.github/workflows/youtubeapp.yml
+++ b/.github/workflows/youtubeapp.yml
@@ -1,8 +1,9 @@
 name: auto_album_recommender
 
-on: workflow_dispatch
-#   schedule:
-#     - cron: '30 5 * * *'
+on: 
+  schedule:
+    - cron: '30 5 * * 1'
+# workflow_dispatch
 
 jobs:
   build:
