--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,8 +1,8 @@
-name: automate_todoist
+name: automations
 
 on:
   schedule:
-    - cron: '00 5 * * Sun'
+    - cron: '00 5 * * *'
 
 jobs:
   build:
@@ -23,4 +23,4 @@ jobs:
       env:
         TODOIST_API_KEY: ${{ secrets.TODOIST_API_KEY }}
       run: |
-        python automate.py
+        python automations.py
