--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,6 @@ regex==2022.6.2
 requests==2.28.0
 rsa==4.8
 six==1.16.0
-todoist-python==8.1.3
+todoist-api-python
 uritemplate==4.1.1
 urllib3==1.26.9
