--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==3.6.2
 attrs==22.2.0
 cachetools==5.2.0
 certifi==2022.5.18.1
@@ -8,20 +9,31 @@ google-auth==2.16.2
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==1.0.0
 googleapis-common-protos==1.56.2
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.16.3
 httplib2==0.20.4
+httpx==0.23.3
+hyperframe==6.0.1
 idna==3.3
 oauthlib==3.2.2
 protobuf==3.20.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.9
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+reclaim-sdk==0.4.0
 regex==2022.6.2
 requests==2.28.0
 requests-oauthlib==1.3.1
+rfc3986==1.5.0
 rsa==4.8
 six==1.16.0
+sniffio==1.3.0
 todoist-api-python==2.0.2
 todoist-python==8.1.3
+toml==0.10.2
 uritemplate==4.1.1
 urllib3==1.26.9
