--- a/.github/workflows/reclaim_automation.yml
+++ b/.github/workflows/reclaim_automation.yml
@@ -1,8 +1,8 @@
 name: reclaim_automations
 
-on: workflow_dispatch
-#   schedule:
-#     - cron: '00 * ? * *'
+on:
+  schedule:
+    - cron: '00 * ? * *'
 
 jobs:
   build:
