--- a/.github/workflows/reclaim_automation.yml
+++ b/.github/workflows/reclaim_automation.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run todoist_automation
+    - name: Run reclaim_automations
       env:
         TODOIST_API_KEY: ${{ secrets.TODOIST_API_KEY }}
         RECLAIM_TOKEN: ${{ secrets.RECLAIM_TOKEN }}
