--- a/.github/workflows/youtubeapp.yml
+++ b/.github/workflows/youtubeapp.yml
@@ -24,5 +24,6 @@ jobs:
       env:
         YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
         TODOIST_API_KEY: ${{ secrets.TODOIST_API_KEY }}
+        GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
       run: |
         python youtube.py
